--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
           'sans': ['"Hanken Grotesk"', 'sans-serif']
         },
         extend: {
-          screens: {
-            'sm': '375px',
-          },
           colors: {
             // primary
             'light-red': 'hsl(0, 100%, 67%)',
@@ -45,64 +42,68 @@
   </script>
 </head>
 <body>
-<div class="container mx-auto bg-slate-50">
-  <!-- result area -->
-  <div class="pt-6 pb-10 flex flex-col items-center px-12 bg-gradient-to-b from-light-slate-blue to-light-royal-blue rounded-b-3xl">
-    <h1 class="text-lg text-center text-pale-blue">
-      Your Result
-    </h1>
-    <div class="mt-4 p-8 w-36 flex flex-col space-y-1.5 items-center bg-gradient-to-b from-violet-blue to-persian-blue rounded-full">
-      <p class="text-5xl font-extrabold text-pale-blue">76</p>
-      <p class="text-base text-light-lavender/50">of 100</p>
+<!--background container-->
+<div class="md:flex md:items-center md:justify-center md:min-h-screen md:bg-light-lavender/10">
+  <div class="w-[375px] mx-auto flex flex-col bg-light-lavender/10
+              md:flex-row md:w-[40rem] md:bg-transparent md:shadow-2xl md:rounded-3xl">
+    <!-- result area -->
+    <div class="md:w-[20rem] pt-6 pb-10 flex flex-col items-center px-12 bg-gradient-to-b from-light-slate-blue to-light-royal-blue rounded-b-3xl md:rounded-3xl">
+      <h1 class="text-lg text-center text-pale-blue">
+        Your Result
+      </h1>
+      <div class="mt-4 p-8 w-36 flex flex-col space-y-1.5 items-center bg-gradient-to-b from-violet-blue to-persian-blue rounded-full">
+        <p class="text-5xl font-extrabold text-pale-blue">76</p>
+        <p class="text-base text-light-lavender/50">of 100</p>
+      </div>
+      <h2 class="mt-4 text-2xl text-pale-blue">Great</h2>
+      <p class="mt-2 text-base text-light-lavender/70 text-center">
+        You scored higher than 65% of the people who have taken these tests.
+      </p>
     </div>
-    <h2 class="mt-4 text-2xl text-pale-blue">Great</h2>
-    <p class="mt-2 text-base text-light-lavender/70 text-center">
-      You scored higher than 65% of the people who have taken these tests.
-    </p>
-  </div>
-  <!-- summary area -->
-  <div class="px-8 mt-6">
-    <h1 class="font-bold text-lg text-dark-gray-blue">Summary</h1>
-    <div class="mt-6 flex flex-col space-y-5 font-bold">
-      <!-- reaction -->
-      <div class="px-5 py-4 flex bg-light-red/5 rounded-xl">
-        <img src="images/icon-reaction.svg" alt="reaction-icon">
-        <p class="pl-3 text-light-red">Reaction</p>
-        <p class="ml-auto ">
-          <span class="text-dark-gray-blue">80</span> / <span class="text-dark-gray-blue/50">100</span>
-        </p>
+    <!-- summary area -->
+    <div class="md:w-[20rem] px-8 pt-6">
+      <h1 class="font-bold text-lg text-dark-gray-blue">Summary</h1>
+      <div class="mt-4 flex flex-col space-y-4 font-bold">
+        <!-- reaction -->
+        <div class="px-5 py-4 flex bg-light-red/5 rounded-xl md:py-2">
+          <img src="images/icon-reaction.svg" alt="reaction-icon">
+          <p class="pl-3 text-light-red">Reaction</p>
+          <p class="ml-auto ">
+            <span class="text-dark-gray-blue">80</span> / <span class="text-dark-gray-blue/50">100</span>
+          </p>
+        </div>
+        <!-- memory -->
+        <div class="px-5 py-4 flex bg-orange-yellow/10 rounded-xl md:py-2">
+          <img src="images/icon-memory.svg" alt="memory-icon">
+          <p class="pl-3 text-orange-yellow">Memory</p>
+          <p class="ml-auto ">
+            <span class="text-dark-gray-blue">92</span> / <span class="text-dark-gray-blue/50">100</span>
+          </p>
+        </div>
+        <!-- memory -->
+        <div class="px-5 py-4 flex bg-green-teal/5 rounded-xl md:py-2">
+          <img src="images/icon-verbal.svg" alt="memory-icon">
+          <p class="pl-3 text-green-teal">Verbal</p>
+          <p class="ml-auto ">
+            <span class="text-dark-gray-blue">61</span> / <span class="text-dark-gray-blue/50">100</span>
+          </p>
+        </div>
+        <!-- visual -->
+        <div class="px-5 py-4 flex bg-cobalt-blue/5 rounded-xl md:py-2">
+          <img src="images/icon-visual.svg" alt="memory-icon">
+          <p class="pl-3 text-cobalt-blue">Visual</p>
+          <p class="ml-auto ">
+            <span class="text-dark-gray-blue">72</span> / <span class="text-dark-gray-blue/50">100</span>
+          </p>
+        </div>
       </div>
-      <!-- memory -->
-      <div class="px-5 py-4 flex bg-orange-yellow/10 rounded-xl">
-        <img src="images/icon-memory.svg" alt="memory-icon">
-        <p class="pl-3 text-orange-yellow">Memory</p>
-        <p class="ml-auto ">
-          <span class="text-dark-gray-blue">92</span> / <span class="text-dark-gray-blue/50">100</span>
-        </p>
-      </div>
-      <!-- memory -->
-      <div class="px-5 py-4 flex bg-green-teal/5 rounded-xl">
-        <img src="images/icon-verbal.svg" alt="memory-icon">
-        <p class="pl-3 text-green-teal">Verbal</p>
-        <p class="ml-auto ">
-          <span class="text-dark-gray-blue">61</span> / <span class="text-dark-gray-blue/50">100</span>
-        </p>
-      </div>
-      <!-- visual -->
-      <div class="px-5 py-4 flex bg-cobalt-blue/5 rounded-xl">
-        <img src="images/icon-visual.svg" alt="memory-icon">
-        <p class="pl-3 text-cobalt-blue">Visual</p>
-        <p class="ml-auto ">
-          <span class="text-dark-gray-blue">72</span> / <span class="text-dark-gray-blue/50">100</span>
-        </p>
-      </div>
+      <button class="block w-full my-6 py-3 text-lg text-center text-pale-blue bg-dark-gray-blue rounded-full
+                     transition-colors bg-gradient-to-b hover:from-light-slate-blue hover:to-light-royal-blue
+                     md:py-2"
+              type="button">
+        Continue
+      </button>
     </div>
-    <!-- button -->
-    <button class="block my-6 w-full py-4 text-lg text-center text-pale-blue bg-dark-gray-blue rounded-full
-                   transition-colors bg-gradient-to-b hover:from-light-slate-blue hover:to-light-royal-blue"
-            type="button">
-      Continue
-    </button>
   </div>
 </div>
 </body>
