--- a/index.html
+++ b/index.html
@@ -7,47 +7,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <title>Frontend Mentor | Results summary component</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        fontFamily: {
-          'sans': ['"Hanken Grotesk"', 'sans-serif']
-        },
-        extend: {
-          colors: {
-            // primary
-            'light-red': 'hsl(0, 100%, 67%)',
-            'orange-yellow': 'hsl(39, 100%, 56%)',
-            'green-teal': 'hsl(166, 100%, 37%)',
-            'cobalt-blue': 'hsl(234, 85%, 45%)',
-            // neutral
-            'pale-blue': 'hsl(221, 100%, 96%)',
-            'light-lavender': 'hsl(241, 100%, 89%)',
-            'dark-gray-blue': 'hsl(224, 30%, 27%)',
-            // gradients
-            'light-slate-blue': 'hsl(252, 100%, 67%)',
-            'light-royal-blue': 'hsl(241, 81%, 54%)',
-            'violet-blue': 'hsla(256, 72%, 46%, 1)',
-            'persian-blue': 'hsla(241, 72%, 46%, 0)',
-          },
-          backgroundImage: {
-            'mobile-pattern': "url('images/pattern-background-mobile.svg')",
-            'desktop-pattern': "url('images/pattern-background-desktop.svg')",
-          }
-        }
-      }
-    }
-  </script>
 </head>
 <body>
 <!--background container-->
 <div class="md:flex md:items-center md:justify-center md:min-h-screen md:bg-light-lavender/10">
-  <div class="w-[375px] mx-auto flex flex-col bg-light-lavender/10
-              md:flex-row md:w-[40rem] md:bg-transparent md:shadow-2xl md:rounded-3xl">
+  <div class="mx-auto w-[375px] md:w-auto flex flex-col md:flex-row bg-light-lavender/10 md:bg-transparent md:shadow-2xl md:rounded-3xl">
     <!-- result area -->
-    <div class="md:w-[20rem] pt-6 pb-10 flex flex-col items-center px-12 bg-gradient-to-b from-light-slate-blue to-light-royal-blue rounded-b-3xl md:rounded-3xl">
+    <div class="md:w-80 pt-6 pb-10 flex flex-col items-center px-12 bg-gradient-to-b from-light-slate-blue to-light-royal-blue rounded-b-3xl md:rounded-3xl">
       <h1 class="text-lg text-center text-pale-blue">
         Your Result
       </h1>
@@ -61,7 +29,7 @@
       </p>
     </div>
     <!-- summary area -->
-    <div class="md:w-[20rem] px-8 pt-6">
+    <div class="md:w-80 px-8 pt-6">
       <h1 class="font-bold text-lg text-dark-gray-blue">Summary</h1>
       <div class="mt-4 flex flex-col space-y-4 font-bold">
         <!-- reaction -->
@@ -97,9 +65,8 @@
           </p>
         </div>
       </div>
-      <button class="block w-full my-6 py-3 text-lg text-center text-pale-blue bg-dark-gray-blue rounded-full
-                     transition-colors bg-gradient-to-b hover:from-light-slate-blue hover:to-light-royal-blue
-                     md:py-2"
+      <button class="block w-full my-6 py-3 md:py-2 text-lg text-center text-pale-blue bg-dark-gray-blue rounded-full
+                     transition-colors bg-gradient-to-b hover:from-light-slate-blue hover:to-light-royal-blue"
               type="button">
         Continue
       </button>
