some code improvement

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <title>Frontend Mentor | Results summary component</title>
 </head>
 <body>
-<!--background container-->
+<!--Global Container-->
 <div class="md:flex md:items-center md:justify-center md:min-h-screen md:bg-light-lavender/10">
-  <div class="mx-auto w-[375px] md:w-auto flex flex-col md:flex-row bg-light-lavender/10 md:bg-transparent md:shadow-2xl md:rounded-3xl">
+  <div class="w-[375px] mx-auto flex flex-col md:w-auto md:flex-row md:bg-transparent md:shadow-2xl md:rounded-3xl">
     <!-- result area -->
     <div class="md:w-80 pt-6 pb-10 flex flex-col items-center px-12 bg-gradient-to-b from-light-slate-blue to-light-royal-blue rounded-b-3xl md:rounded-3xl">
       <h1 class="text-lg text-center text-pale-blue">
